--- a/App.config
+++ b/App.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<connectionStrings>
-		 <add name="defaulte" connectionString="Data source=./clinic_db.db ; version=3;" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+	<configSections>
+ </configSections>
+ <connectionStrings>
+  <add name="defaulte" connectionString="Data source=./clinic_db.db ; version=3;"
+   providerName="System.Data.SqlClient" />
+  
+ </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
