--- a/clinic_2.csproj
+++ b/clinic_2.csproj
@@ -67,6 +67,12 @@
     <Compile Include="forms\examination.Designer.cs">
       <DependentUpon>examination.cs</DependentUpon>
     </Compile>
+    <Compile Include="forms\Form_AddNewPatient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forms\Form_AddNewPatient.Designer.cs">
+      <DependentUpon>Form_AddNewPatient.cs</DependentUpon>
+    </Compile>
     <Compile Include="mainform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,8 +89,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlDataAccess.cs" />
+    <Compile Include="forms\LabeledInputText.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="forms\LabeledInputText.Designer.cs">
+      <DependentUpon>LabeledInputText.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="forms\addnewpatient.resx">
       <DependentUpon>addnewpatient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forms\Form_AddNewPatient.resx">
+      <DependentUpon>Form_AddNewPatient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainform.resx">
       <DependentUpon>mainform.cs</DependentUpon>
@@ -104,6 +119,9 @@
     <Content Include="clinic_db.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="forms\LabeledInputText.resx">
+      <DependentUpon>LabeledInputText.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -118,7 +136,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Widgets\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.118.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.118.0\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
